--- a/Source/SSWeb/src/main/webapp/resources/css/style-resp-1.1.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-resp-1.1.css
@@ -517,4 +517,7 @@
     .user-info-logo, .hdr-logo {
 		width: 100px;
 	}
+	.left-panel-content {
+		padding-left: 5px;
+	}
 }
